--- a/src/app/csoport/csoport-egy/csoport-egy.component.html
+++ b/src/app/csoport/csoport-egy/csoport-egy.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret">
   <h5>{{csoportservice.cim}}</h5>
-  <h6 *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].CSOPORT1}}</h6>
+  <h6 *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].Csoport1}}</h6>
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
