--- a/src/app/csoport/csoport-reszletek/csoport-reszletek.component.html
+++ b/src/app/csoport/csoport-reszletek/csoport-reszletek.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].CSOPORTKOD}}</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].Csoportkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Csoport:</td>
-      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].CSOPORT1}}</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].Csoport1}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
