--- a/src/app/felhasznalo/felhasznalo-reszletek/felhasznalo-reszletek.component.html
+++ b/src/app/felhasznalo/felhasznalo-reszletek/felhasznalo-reszletek.component.html
@@ -4,52 +4,52 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].FELHASZNALOKOD}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Felhasznalokod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Azonosító:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].AZONOSITO}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Azonosito}}</td>
     </tr>
     <tr>
       <td class="egylabel">Név:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].NEV}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Nev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Telefon:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].TELEFON}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Telefon}}</td>
     </tr>
     <tr>
       <td class="egylabel">Email:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].EMAIL}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Email}}</td>
     </tr>
     <tr>
       <td class="egylabel">Státusz:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].STATUSZ}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Statusz}}</td>
     </tr>
     <tr>
       <td class="egylabel">A státusz kelte:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].STATUSZKELTE | datehun}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Statuszkelte | datehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Log:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1 && felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].LOGONLOG">Igen</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1 && !felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].LOGONLOG">Nem</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1 && felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Logonlog">Igen</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1 && !felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Logonlog">Nem</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="felhasznaloservice.DtoSelectedIndex !== -1">{{felhasznaloservice.Dto[felhasznaloservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
