--- a/src/app/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
+++ b/src/app/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
@@ -19,8 +19,8 @@
     <tr *ngFor="let item of fizetesimodservice.Dto; let i = index">
       <td *ngIf="fizetesimodservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
           (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.FIZETESIMODKOD}}</td>
-      <td>{{item.FIZETESIMOD1}}</td>
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Fizetesimodkod}}</td>
+      <td>{{item.Fizetesimod1}}</td>
     </tr>
     </tbody>
   </table>
