--- a/src/app/fizetesimod/fizetesimod-reszletek/fizetesimod-reszletek.component.html
+++ b/src/app/fizetesimod/fizetesimod-reszletek/fizetesimod-reszletek.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].FIZETESIMODKOD}}</td>
+      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].Fizetesimodkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Fizetési mód:</td>
-      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].FIZETESIMOD1}}</td>
+      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].Fizetesimod1}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="fizetesimodservice.DtoSelectedIndex !== -1">{{fizetesimodservice.Dto[fizetesimodservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
