--- a/src/app/helyseg/helyseg-reszletek/helyseg-reszletek.component.html
+++ b/src/app/helyseg/helyseg-reszletek/helyseg-reszletek.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].HELYSEGKOD}}</td>
+      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].Helysegkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Helység:</td>
-      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].HELYSEGNEV}}</td>
+      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].Helysegnev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="helysegservice.DtoSelectedIndex !== -1">{{helysegservice.Dto[helysegservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
