--- a/src/app/irattipus/irattipus-reszletek/irattipus-reszletek.component.html
+++ b/src/app/irattipus/irattipus-reszletek/irattipus-reszletek.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].IRATTIPUSKOD}}</td>
+      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].Irattipuskod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Irattipus:</td>
-      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].IRATTIPUS1}}</td>
+      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].Irattipus1}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="irattipusservice.DtoSelectedIndex !== -1">{{irattipusservice.Dto[irattipusservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
