--- a/src/app/teendo/teendo-list/teendo-list.component.html
+++ b/src/app/teendo/teendo-list/teendo-list.component.html
@@ -21,8 +21,8 @@
       <td *ngIf="teendoservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
           (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-          (click)="setClickedRow(i)">{{item.TEENDOKOD}}</td>
-      <td>{{item.TEENDO1}}</td>
+          (click)="setClickedRow(i)">{{item.Teendokod}}</td>
+      <td>{{item.Teendo1}}</td>
     </tr>
     </tbody>
   </table>
