--- a/src/app/teendo/teendo-reszletek/teendo-reszletek.component.html
+++ b/src/app/teendo/teendo-reszletek/teendo-reszletek.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].TEENDOKOD}}</td>
+      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].Teendokod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Teendő:</td>
-      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].TEENDO1}}</td>
+      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].Teendo1}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="teendoservice.DtoSelectedIndex !== -1">{{teendoservice.Dto[teendoservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
