--- a/src/app/afakulcs/afakulcs-reszletek/afakulcs-reszletek.component.html
+++ b/src/app/afakulcs/afakulcs-reszletek/afakulcs-reszletek.component.html
@@ -4,31 +4,31 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].AFAKULCSKOD}}</td>
+      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].Afakulcskod}}</td>
     </tr>
     <tr>
       <td class="egylabel">ÁFA kulcs:</td>
-      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].AFAKULCS1}}</td>
+      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].Afakulcs1}}</td>
     </tr>
     <tr>
       <td class="egylabel">ÁFA mértéke, %:</td>
-      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].AFAMERTEKE}}</td>
+      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].Afamerteke}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="afakulcsservice.DtoSelectedIndex !== -1">{{afakulcsservice.Dto[afakulcsservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
