--- a/src/app/helyseg/helyseg-list/helyseg-list.component.html
+++ b/src/app/helyseg/helyseg-list/helyseg-list.component.html
@@ -19,8 +19,8 @@
     <tbody>
     <tr *ngFor="let item of helysegservice.Dto; let i = index">
       <td *ngIf="helysegservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.HELYSEGKOD}}</td>
-      <td>{{item.HELYSEGNEV}}</td>
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Helysegkod}}</td>
+      <td>{{item.Helysegnev}}</td>
     </tr>
     </tbody>
   </table>
