--- a/src/app/irattipus/irattipus-list/irattipus-list.component.html
+++ b/src/app/irattipus/irattipus-list/irattipus-list.component.html
@@ -19,8 +19,8 @@
     <tbody>
       <tr *ngFor="let item of irattipusservice.Dto; let i = index">
         <td *ngIf="irattipusservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="setClickedRow(i)">{{item.IRATTIPUSKOD}}</td>
-        <td>{{item.IRATTIPUS1}}</td>
+        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="setClickedRow(i)">{{item.Irattipuskod}}</td>
+        <td>{{item.Irattipus1}}</td>
       </tr>
     </tbody>
   </table>
