--- a/src/app/me/me-list/me-list.component.html
+++ b/src/app/me/me-list/me-list.component.html
@@ -19,8 +19,8 @@
     <tbody>
     <tr *ngFor="let item of meservice.Dto; let i = index">
       <td *ngIf="meservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.MEKOD}}</td>
-      <td>{{item.ME}}</td>
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Mekod}}</td>
+      <td>{{item.Me}}</td>
     </tr>
     </tbody>
   </table>
