--- a/src/app/me/me-reszletek/me-reszletek.component.html
+++ b/src/app/me/me-reszletek/me-reszletek.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].MEKOD}}</td>
+      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].Mekod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Mennyiségi egység:</td>
-      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].ME}}</td>
+      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].Me}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="meservice.DtoSelectedIndex !== -1">{{meservice.Dto[meservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
