--- a/src/app/penznem/penznem-reszletek/penznem-reszletek.component.html
+++ b/src/app/penznem/penznem-reszletek/penznem-reszletek.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].PENZNEMKOD}}</td>
+      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].Penznemkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Pénznem:</td>
-      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].PENZNEM1}}</td>
+      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].Penznem1}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="penznemservice.DtoSelectedIndex !== -1">{{penznemservice.Dto[penznemservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
