--- a/src/app/termekdij/termekdij-list/termekdij-list.component.html
+++ b/src/app/termekdij/termekdij-list/termekdij-list.component.html
@@ -21,10 +21,10 @@
     <tbody>
     <tr *ngFor="let item of termekdijservice.Dto; let i = index">
       <td *ngIf="termekdijservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.TERMEKDIJKOD}}</td>
-      <td>{{item.TERMEKDIJKT}}</td>
-      <td>{{item.TERMEKDIJMEGNEVEZES}}</td>
-      <td>{{item.TERMEKDIJEGYSEGAR}}</td>
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Termekdijkod}}</td>
+      <td>{{item.Termekdijkt}}</td>
+      <td>{{item.Termekdijmegnevezes}}</td>
+      <td>{{item.Termekdijegysegar}}</td>
     </tr>
     </tbody>
   </table>
