--- a/src/app/termekdij/termekdij-reszletek/termekdij-reszletek.component.html
+++ b/src/app/termekdij/termekdij-reszletek/termekdij-reszletek.component.html
@@ -4,35 +4,35 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].TERMEKDIJKOD}}</td>
+      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Termekdijkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Termékdíj KT:</td>
-      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].TERMEKDIJKT}}</td>
+      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Termekdijkt}}</td>
     </tr>
     <tr>
       <td class="egylabel">Termékdíj megnevezés:</td>
-      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].TERMEKDIJMEGNEVEZES}}</td>
+      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Termekdijmegnevezes}}</td>
     </tr>
     <tr>
       <td class="egylabel">Termékdíj egységár:</td>
-      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].TERMEKDIJEGYSEGAR}}</td>
+      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Termekdijegysegar}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="termekdijservice.DtoSelectedIndex !== -1">{{termekdijservice.Dto[termekdijservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
