--- a/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
+++ b/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="csoport1"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="csoportservice.DtoEdited.CSOPORT1" name="csoport1">
+               [(ngModel)]="csoportservice.DtoEdited.Csoport1" name="csoport1">
       </div>
     </div>
 
