--- a/src/app/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="azonosito"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="felhasznaloservice.DtoEdited.AZONOSITO" name="azonosito">
+               [(ngModel)]="felhasznaloservice.DtoEdited.Azonosito" name="azonosito">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -21,7 +21,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="nev"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="felhasznaloservice.DtoEdited.NEV" name="nev">
+               [(ngModel)]="felhasznaloservice.DtoEdited.Nev" name="nev">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -31,7 +31,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="telefon"
                maxlength="50" required autocomplete="off"
-               [(ngModel)]="felhasznaloservice.DtoEdited.TELEFON" name="telefon">
+               [(ngModel)]="felhasznaloservice.DtoEdited.Telefon" name="telefon">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -41,7 +41,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="email"
                maxlength="50" required autocomplete="off"
-               [(ngModel)]="felhasznaloservice.DtoEdited.EMAIL" name="email">
+               [(ngModel)]="felhasznaloservice.DtoEdited.Email" name="email">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -50,7 +50,7 @@
       </div>
       <div class="col-md-2">
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="felhasznaloservice.DtoEdited.STATUSZ" name="statusz">
+                [(ngModel)]="felhasznaloservice.DtoEdited.Statusz" name="statusz">
           <option>OK</option>
           <option>Tiltott</option>
         </select>
@@ -62,7 +62,7 @@
       </div>
       <div class="col-md-2">
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="felhasznaloservice.DtoEdited.LOGONLOG" name="log">
+                [(ngModel)]="felhasznaloservice.DtoEdited.Logonlog" name="log">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
         </select>
