--- a/src/app/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
+++ b/src/app/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="irattipus1"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="fizetesimodservice.DtoEdited.FIZETESIMOD1" name="irattipus1">
+               [(ngModel)]="fizetesimodservice.DtoEdited.Fizetesimod1" name="irattipus1">
       </div>
     </div>
 
