--- a/src/app/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="irattipus1"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="irattipusservice.DtoEdited.IRATTIPUS1" name="irattipus1">
+               [(ngModel)]="irattipusservice.DtoEdited.Irattipus1" name="irattipus1">
       </div>
     </div>
 
