--- a/src/app/me/me-szerkesztes/me-szerkesztes.component.html
+++ b/src/app/me/me-szerkesztes/me-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="irattipus1"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="meservice.DtoEdited.ME" name="irattipus1">
+               [(ngModel)]="meservice.DtoEdited.Me" name="irattipus1">
       </div>
     </div>
 
