--- a/src/app/teendo/teendo-szerkesztes/teendo-szerkesztes.component.html
+++ b/src/app/teendo/teendo-szerkesztes/teendo-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-5">
         <input type="text" class="form-control form-control-sm" id="irattipus1"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="teendoservice.DtoEdited.TEENDO1" name="irattipus1">
+               [(ngModel)]="teendoservice.DtoEdited.Teendo1" name="irattipus1">
       </div>
     </div>
 
