--- a/src/app/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
+++ b/src/app/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="kt"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="termekdijservice.DtoEdited.TERMEKDIJKT" name="kt">
+               [(ngModel)]="termekdijservice.DtoEdited.Termekdijkt" name="kt">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -21,7 +21,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="megnevezes"
                maxlength="50" required autocomplete="off"
-               [(ngModel)]="termekdijservice.DtoEdited.TERMEKDIJMEGNEVEZES" name="megnevezes">
+               [(ngModel)]="termekdijservice.DtoEdited.Termekdijmegnevezes" name="megnevezes">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -31,7 +31,7 @@
       <div class="col-md-1">
         <input type="number" class="form-control form-control-sm" id="egysegar"
                required autocomplete="off"
-               [(ngModel)]="termekdijservice.DtoEdited.TERMEKDIJEGYSEGAR" name="egysegar">
+               [(ngModel)]="termekdijservice.DtoEdited.Termekdijegysegar" name="egysegar">
       </div>
     </div>
 
