--- a/src/app/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="afakulcs"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="afakulcsservice.DtoEdited.AFAKULCS1" name="afakulcs">
+               [(ngModel)]="afakulcsservice.DtoEdited.Afakulcs1" name="afakulcs">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -21,7 +21,7 @@
       <div class="col-md-1">
         <input type="number" class="form-control form-control-sm" id="egysegar"
                required autocomplete="off"
-               [(ngModel)]="afakulcsservice.DtoEdited.AFAMERTEKE" name="egysegar">
+               [(ngModel)]="afakulcsservice.DtoEdited.Afamerteke" name="egysegar">
       </div>
     </div>
 
