--- a/src/app/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
+++ b/src/app/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="helysegnev"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="helysegservice.DtoEdited.HELYSEGNEV" name="helysegnev">
+               [(ngModel)]="helysegservice.DtoEdited.Helysegnev" name="helysegnev">
       </div>
     </div>
 
