--- a/src/app/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
+++ b/src/app/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="irattipus1"
                maxlength="3" required autocomplete="off"
-               [(ngModel)]="penznemservice.DtoEdited.PENZNEM1" name="irattipus1">
+               [(ngModel)]="penznemservice.DtoEdited.Penznem1" name="irattipus1">
       </div>
     </div>
 
