--- a/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
+++ b/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m1"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.BIZONYLAT_BIZONYLATKEP_IRATKOD" name="m1">
+               [(ngModel)]="particioservice.Dto.BizonylatBizonylatkepIratkod" name="m1">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -20,7 +20,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m2"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.BIZONYLAT_EREDETIPELDANYOK_SZAMA" name="m2">
+               [(ngModel)]="particioservice.Dto.BizonylatEredetipeldanyokSzama" name="m2">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -30,7 +30,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m3"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.BIZONYLAT_MASOLATOK_SZAMA" name="m3">
+               [(ngModel)]="particioservice.Dto.BizonylatMasolatokSzama" name="m3">
       </div>
     </div>
 
