--- a/src/app/particio/particio-egy/particio-egy.component.html
+++ b/src/app/particio/particio-egy/particio-egy.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>{{particioservice.cim}}</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{particioservice.Dto.MEGNEVEZES}}</div>
+    <div style="font-size: smaller">{{particioservice.Dto.Megnevezes}}</div>
   </div>
   <div>
     <nav>
