--- a/src/app/particio/particio-projekt/particio-projekt.component.html
+++ b/src/app/particio/particio-projekt/particio-projekt.component.html
@@ -9,7 +9,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m1"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.PROJEKT_AJANLAT_IRATKOD" name="m1">
+               [(ngModel)]="particioservice.Dto.ProjektAjanlatIratkod" name="m1">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -19,7 +19,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m2"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.PROJEKT_ELEGEDETTSEGIFELMERES_IRATKOD" name="m2">
+               [(ngModel)]="particioservice.Dto.ProjektElegedettsegifelmeresIratkod" name="m2">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -29,7 +29,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m3"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.PROJEKT_KESZREJELENTES_DEMASZ_IRATKOD" name="m3">
+               [(ngModel)]="particioservice.Dto.ProjektKeszrejelentesDemaszIratkod" name="m3">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -39,7 +39,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m4"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.PROJEKT_KESZREJELENTES_ELMUEMASZ_IRATKOD" name="m4">
+               [(ngModel)]="particioservice.Dto.ProjektKeszrejelentesElmuemaszIratkod" name="m4">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -49,7 +49,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m5"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.PROJEKT_KESZREJELENTES_EON_IRATKOD" name="m5">
+               [(ngModel)]="particioservice.Dto.ProjektKeszrejelentesEonIratkod" name="m5">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -59,7 +59,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m6"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.PROJEKT_MUNKALAP_IRATKOD" name="m6">
+               [(ngModel)]="particioservice.Dto.ProjektMunkalapIratkod" name="m6">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -69,7 +69,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m7"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.PROJEKT_SZALLITASISZERZODES_IRATKOD" name="m7">
+               [(ngModel)]="particioservice.Dto.ProjektSzallitasiszerzodesIratkod" name="m7">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -79,7 +79,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m8"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.PROJEKT_SZERZODES_IRATKOD" name="m8">
+               [(ngModel)]="particioservice.Dto.ProjektSzerzodesIratkod" name="m8">
       </div>
     </div>
 
