--- a/src/app/volume/volume-reszletek/volume-reszletek.component.html
+++ b/src/app/volume/volume-reszletek/volume-reszletek.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].VOLUMEKOD}}</td>
+      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].Volumekod}}</td>
     </tr>
     <tr>
       <td class="egylabel">No:</td>
-      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].VOLUMENO}}</td>
+      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].Volumeno}}</td>
     </tr>
     <tr>
       <td class="egylabel">Max. méret:</td>
-      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].MAXMERET}}</td>
+      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].Maxmeret}}</td>
     </tr>
     <tr>
       <td class="egylabel">Jelenlegi méret:</td>
-      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].JELENLEGIMERET}}</td>
+      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].Jelenlegimeret}}</td>
     </tr>
     <tr>
       <td class="egylabel">Állapot:</td>
-      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].ALLAPOT}}</td>
+      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].Allapot}}</td>
     </tr>
     <tr>
       <td class="egylabel">Az állapot kelte:</td>
-      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].ALLAPOTKELTE | datetimehun}}</td>
+      <td *ngIf="volumeservice.DtoSelectedIndex !== -1">{{volumeservice.Dto[volumeservice.DtoSelectedIndex].Allapotkelte | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
