--- a/src/app/volume/volume-list/volume-list.component.html
+++ b/src/app/volume/volume-list/volume-list.component.html
@@ -13,12 +13,12 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of volumeservice.Dto; let i = index">
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.VOLUMEKOD}}</td>
-      <td>{{item.VOLUMENO}}</td>
-      <td>{{item.MAXMERET}}</td>
-      <td>{{item.JELENLEGIMERET}}</td>
-      <td>{{item.ALLAPOT}}</td>
-      <td>{{item.ALLAPOTKELTE | datetimehun}}</td>
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Volumekod}}</td>
+      <td>{{item.Volumeno}}</td>
+      <td>{{item.Maxmeret}}</td>
+      <td>{{item.Jelenlegimeret}}</td>
+      <td>{{item.Allapot}}</td>
+      <td>{{item.Allapotkelte | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
