dokumentum pdfletoltes nélkül

--- a/src/app/irat/dokumentum/dokumentum-egy/dokumentum-egy.component.html
+++ b/src/app/irat/dokumentum/dokumentum-egy/dokumentum-egy.component.html
@@ -2,7 +2,7 @@
   <h5>{{dokumentumservice.cim}}</h5>
   <!--<h6 *ngIf="dokumentumservice.DtoSelectedIndex !== -1">{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].MEGJEGYZES}}</h6>-->
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].DOKUMENTUMKOD}} {{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].MEGJEGYZES}}</div>
+    <div style="font-size: smaller">{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Dokumentumkod}} {{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Megjegyzes}}</div>
   </div>
   <div>
     <nav>
