--- a/src/app/irat/dokumentum/dokumentum-reszletek/dokumentum-reszletek.component.html
+++ b/src/app/irat/dokumentum/dokumentum-reszletek/dokumentum-reszletek.component.html
@@ -4,36 +4,36 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].DOKUMENTUMKOD}}</td>
+      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Dokumentumkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Megjegyzés:</td>
-      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].MEGJEGYZES}}</td>
+      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Megjegyzes}}</td>
     </tr>
     <tr>
       <td class="egylabel">Méret:</td>
-      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].MERET}}</td>
+      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Meret}}</td>
     </tr>
     <tr>
       <td class="egylabel">Ext:</td>
-      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].EXT}}</td>
+      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Ext}}</td>
     </tr>
 
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td>{{dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
